[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-helpers"
version = "0.1.0"
description = "Python helpers for the workspace"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.14",
    "botocore>=1.39.14",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "moto>=5.1.8",
    "pytest>=8.4.1",
    "setuptools>=80.9.0",
    "starlette>=0.47.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "moto>=5.0.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["auth", "aws", "common"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
